--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>INT. S.A.</title>
     <link rel="shortcut icon" href="src/assets/img/favicon.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -87,6 +89,7 @@
                 -webkit-transform: scale(1.0);
             }
         }
+
     </style>
     <script>
     window.onload=function () {
